fix: update tag-data dto to send tkv info for cleaner api
update tag-data dto to send tkv info as well as part of response
this is to ensure the response has clear info
